# awfutils

./: .pre-commit-config.yaml  README.md  jaxtyping_experiments.py  ndarray_str.ipynb  ndarray_str.py  pyproject.toml  pytree_utils.py  requirements-dev.txt  requirements.txt  test_Arg.py  test_ndarray_str.py  test_typecheck.py  typecheck.py  typecheck_example.py
docs/: jaxtyping_experiments.py  ndarray_str.ipynb  typecheck.ipynb
experiments/: typecheck_example.py
src/awfutils/: Arg.py  MkSweep.py  __init__.py  misc.py  ml_collections_tools.py  ndarray_str.py  print_utils.py  pytree_utils.py  typecheck.py
test/: test_Arg.py  test_MkSweep.py  test_ndarray_str.py  test_typecheck.py
